precompiles/utils/macro/tests/precompile/handle/missing.stderr
error: Precompile methods must have at least 1 parameter (the PrecompileHandle)
  --> tests/precompile/handle/missing.rs:21:2
   |
21 |     fn foo() {
   |     ^^^^^^^^
